# advrider

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Dockerfile.binstall  Dockerfile.scraper  Dockerfile.spider  Justfile  Procfile  docker-compose.yml  hrefs.txt  ip  output.json  page.html  paths.txt  posts.json  promptfooconfig.yaml  state.json  summerize.fish
.cargo/: config.toml
promptfoo/: map-promptfooconfig.yaml  promptfooconfig.yaml
prompts/: map.md  reduce.md
prompts/drafts/: map.md  reduce.md  test-generator.md
src/: ip.rs  lib.rs  main.rs  tor.rs
