[package]
name = "advrider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-openai = "0.20.0"
async-std = "1.12.0"
dirs = "5.0.1"
env_logger = "0.11.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
llm-chain = "*"
llm-chain-openai = "0.13.0"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
scrub = "0.1.0"
select = "0.6.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
unicase = "2.7.0"
