[package]
name = "advrider"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { version = "1.93.28", features = ["glob", "budget", "socks", "cache", "cache_mem", "headers"] }
# llm-chain-openai = { path = "/Users/linus/Code/llm-chain/crates/llm-chain-openai" }
# llm-chain = { path = "/Users/linus/Code/llm-chain/crates/llm-chain" }

llm-chain-openai = "0.13.0"
llm-chain = "*"

reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "full"] }
async-openai = "0.21.0"
serde_json = "1.0.116"
env_logger = "0.11.3"
lazy_static = "1.4.0"
async-std = "1.12.0"
indicatif = "0.17.8"
anyhow = "1.0.82"
dotenv = "0.15.0"
unicase = "2.7.0"
regex = "1.10.4"
select = "0.6.0"
log = "0.4.21"
rand = "0.8.5"
html2text = "0.12.5"
warp = "0.3.7"

## override settings for tiktoken-rs
[patch.crates-io.tiktoken-rs]
# version = "0.5.7"
git = "https://github.com/zurawiki/tiktoken-rs.git"
